--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,10 +1,6 @@
 <div id="content">
-    <div class="container content-section" id="graph-content">
-        <div class="centre" style="margin: 10px">
-            <!-- cytoscape graf -->
-            <div id="cy"></div>
-        </div>
-    </div>
+	<h1>Ano, tady je náš graf!</h1>
+    {{tasks-graph}}
 </div>
 <section id="assignments" class="container content-section" style="text-align:justify">
 	<!-- Sekcia noviniek -->
