--- a/app/styles/layout/navbar-admin.scss
+++ b/app/styles/layout/navbar-admin.scss
@@ -2,3 +2,17 @@
   margin-top: 73px;
   width:100%;
 }
+
+.navbar-admin .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.navbar-admin .navbar-collapse {
+  text-align: center;
+}
+
+.navbar-admin-li {
+    margin-right: 60px;
+}
