--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -1,5 +1,5 @@
 <!-- header content -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="z-index:150">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -17,7 +17,7 @@
             {{/link-to}}
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse in" id="bs-example-navbar-collapse-1">
+        <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse in">
             <ul class="nav navbar-nav navbar-right" style="height: 50px">
                 <li>
                     {{#link-to "tasks"}}Úlohy{{/link-to}}
@@ -56,7 +56,8 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu"> <!-- TODO odkazy -->
                       <li>{{#link-to "profile"}}Profil{{/link-to}}</li>
                       <li>{{#link-to "settings"}}Nastavení{{/link-to}}</li>
-                      <li><a href="#">Odhlásit se</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#">Odhlásit se</a></li> <!-- TODO odhlasit -->
                     </ul>
                   </li>
                 {{else}}
