--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -76,7 +76,7 @@
 					</div>
 					<div class="controls form-inline" style="margin-top:20px">
 							<label for="threadName">Příspěvek:</label>
-							<textarea class="form-control" style="min-width: 100%" rows="3"></textarea>
+							{{text-editor value=forumNewArticleEditor}}
 					</div>
 					<!-- TODO: textarea na http://www.tinymce.com/ -->
 					<button class="btn btn-primary" style="margin-top:20px">Odeslat</button>
