--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -1,1 +1,86 @@
-export
+<section id="admin-email" class="container content-section" style=" margin-top: 20px; text-align:justify">
+  <div class="panel panel-ksi">
+	  <div class="panel-heading panel-heading-ksi"><h3>Export dat ze systému – obálky</h3></div>
+	  <div class="panel-body">
+      <div class="form-group">
+        <label>Ročník:</label>
+        <select>
+         <option value="2014">2014</option> <!-- TODO rocniky -->
+         <option value="2013">2013</option>
+         <option value="2012">2012</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Obrázek:</label>
+        <select>
+         <option value="2014">daco.jpg</option> <!-- TODO obrazky z databaze -->
+         <option value="2014">daco.jpg</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label class="inline" for="email">Nový obrázek:</label> <!-- TODO novy obrazok do databaze -->
+        <input class="inline" type="file">
+      </div>
+
+      <div class="row" style="margin-left:0px">
+        <button class="btn btn-primary inline" id="export-pdf">Export do PDF</button> <!-- TODO button -->
+        <button class="btn btn-primary inline" id="export-pdf">Export do LaTeXu</button> <!-- TODO button -->
+      </div>
+	  </div>
+	</div>
+
+  <div class="panel panel-ksi">
+	  <div class="panel-heading panel-heading-ksi"><h3>Export dat ze systému – výpis řešitelů</h3></div>
+	  <div class="panel-body">
+
+      <div class="panel panel-default">
+    	  <div class="panel-heading">Zvolit omezení</div>
+    	  <div class="panel-body">
+          <div class="form-group">
+            <label>Řešitel<br>ročníku:</label>
+            <select>
+             <option value="2014">2014</option> <!-- TODO rocniky -->
+             <option value="2013">2013</option>
+             <option value="2012">2012</option>
+            </select>
+            <label style="margin-left:20px">Maturant v<br> roce:</label>
+            <select>
+             <option value="2014">2014</option> <!-- TODO rocniky -->
+             <option value="2013">2013</option>
+             <option value="2012">2012</option>
+            </select>
+            <label style="margin-left:20px">Alespoň<br>bodů:</label>
+            <select>
+             <option value="2014">2014</option> <!-- TODO rocniky -->
+             <option value="2013">2013</option>
+             <option value="2012">2012</option>
+            </select>
+          </div>
+          <button class="btn btn-primary inline" style="width: 250px; margin-left:0px">OK</button> <!-- TODO button -->
+        </div>
+    	</div>
+
+      <table class="table table-striped">
+        <thead>
+          <tr style="height:45px">
+            <th>Jméno</th>
+            <th>E-mail</th>
+            <th>Bydlište</th>
+    				<th>Škola</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="height:45px">
+            <td>Juraj Karlubík</td> <!-- meno -->
+            <td>karlubik.juraj@gmail.com</td> <!-- email -->
+            <td>Novozámocká 252, Nitra, 94905, SR</td> <!-- bydliste -->
+    				<td>Gymnázium Golianova 68, Nitra, 94911, SR</td> <!-- skola -->
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+	</div>
+</section>
