--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -39,19 +39,19 @@
     	  <div class="panel-heading">Zvolit omezení</div>
     	  <div class="panel-body">
           <div class="form-group">
-            <label>Řešitel<br>ročníku:</label>
+            <label>Řešitel ročníku:</label>
             <select>
              <option value="2014">2014</option> <!-- TODO rocniky -->
              <option value="2013">2013</option>
              <option value="2012">2012</option>
             </select>
-            <label style="margin-left:20px">Maturant v<br> roce:</label>
+            <label style="margin-left:20px">Maturant v roce:</label>
             <select>
              <option value="2014">2014</option> <!-- TODO rocniky -->
              <option value="2013">2013</option>
              <option value="2012">2012</option>
             </select>
-            <label style="margin-left:20px">Alespoň<br>bodů:</label>
+            <label style="margin-left:20px">Alespoň bodů:</label>
             <select>
              <option value="2014">2014</option> <!-- TODO rocniky -->
              <option value="2013">2013</option>
