admin schools template

--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -1,4 +1,4 @@
-<section id="admin-email" class="container content-section" style=" margin-top: 20px; text-align:justify">
+<section id="admin-export" class="container content-section" style=" margin-top: 20px; text-align:justify">
   <div class="panel panel-ksi">
 	  <div class="panel-heading panel-heading-ksi"><h3>Export dat ze systému – obálky</h3></div>
 	  <div class="panel-body">
