admin articles template

--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -14,8 +14,8 @@
       <div class="form-group">
         <label>Obrázek:</label>
         <select>
-         <option value="2014">daco.jpg</option> <!-- TODO obrazky z databaze -->
-         <option value="2014">daco.jpg</option>
+         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option> <!-- TODO obrazky z databaze -->
+         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option>
         </select>
       </div>
 
