--- a/app/templates/admin/articles.hbs
+++ b/app/templates/admin/articles.hbs
@@ -1,1 +1,26 @@
-editace noviniek
+<section id="admin-articles" class="container content-section" style=" margin-top: 20px; text-align:justify">
+  <h2>Správa článků</h2>
+  {{#link-to "admin/article-edit"}}nový článek{{/link-to}}
+  <table class="table table-striped">
+    <thead>
+      <tr style="height:45px">
+        <th>Termín publikace</th>
+        <th>Titulek</th>
+        <th>Zveřejněna</th>
+        <th>Akce</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr style="height:45px">
+        <td>27.12.2014</td> <!-- termin publikace -->
+        <td>Vše nejlepší přeje tučňák Karlík</td> <!-- titulek -->
+        <td>ano</td> <!-- zverejnena -->
+        <td>
+          {{#link-to "admin/article-edit"}}upravit{{/link-to}}
+          |
+          <a href="#">smazat</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
