admin correcting template + small bugs

--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -21,8 +21,8 @@
       <div class="form-group">
         <label>Obrázek:</label>
         <select>
-         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option> <!-- TODO obrazky z databaze -->
-         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option>
+         <option><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option> <!-- TODO obrazky z databaze -->
+         <option><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option>
         </select>
       </div>
 
