--- a/app/templates/admin/export.hbs
+++ b/app/templates/admin/export.hbs
@@ -1,21 +1,22 @@
 <section id="admin-export" class="container content-section" style=" margin-top: 20px; text-align:justify">
+  <h2>Export dat ze systému</h2>
   <div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi"><h3>Export dat ze systému – obálky</h3></div>
+	  <div class="panel-heading panel-heading-ksi"><h3>Obálky</h3></div>
 	  <div class="panel-body">
       <div class="form-group">
         <label>Ročník:</label>
         <select>
-         <option value="2014">2014</option> <!-- TODO rocniky -->
-         <option value="2013">2013</option>
-         <option value="2012">2012</option>
+         <option>2014</option> <!-- TODO rocniky -->
+         <option>2013</option>
+         <option>2012</option>
         </select>
       </div>
 
       <div class="form-group">
         <label>Obrázek:</label>
         <select>
-         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option> <!-- TODO obrazky z databaze -->
-         <option value="2014"><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option>
+         <option><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option> <!-- TODO obrazky z databaze -->
+         <option><img src="http://placehold.it/30x30" style="width: 100%">daco.jpg</option>
         </select>
       </div>
 
@@ -32,7 +33,7 @@
 	</div>
 
   <div class="panel panel-ksi">
-	  <div class="panel-heading panel-heading-ksi"><h3>Export dat ze systému – výpis řešitelů</h3></div>
+	  <div class="panel-heading panel-heading-ksi"><h3>Výpis řešitelů</h3></div>
 	  <div class="panel-body">
 
       <div class="panel panel-default">
@@ -41,21 +42,21 @@
           <div class="form-group">
             <label>Řešitel ročníku:</label>
             <select>
-             <option value="2014">2014</option> <!-- TODO rocniky -->
-             <option value="2013">2013</option>
-             <option value="2012">2012</option>
+             <option>2014</option> <!-- TODO rocniky -->
+             <option>2013</option>
+             <option>2012</option>
             </select>
             <label style="margin-left:20px">Maturant v roce:</label>
             <select>
-             <option value="2014">2014</option> <!-- TODO rocniky -->
-             <option value="2013">2013</option>
-             <option value="2012">2012</option>
+             <option>2014</option> <!-- TODO rocniky -->
+             <option>2013</option>
+             <option>2012</option>
             </select>
             <label style="margin-left:20px">Alespoň bodů:</label>
             <select>
-             <option value="2014">2014</option> <!-- TODO rocniky -->
-             <option value="2013">2013</option>
-             <option value="2012">2012</option>
+             <option>2014</option> <!-- TODO rocniky -->
+             <option>2013</option>
+             <option>2012</option>
             </select>
           </div>
           <button class="btn btn-primary inline" style="width: 250px; margin-left:0px">OK</button> <!-- TODO button -->
