--- a/app/templates/admin/school-edit.hbs
+++ b/app/templates/admin/school-edit.hbs
@@ -31,17 +31,17 @@
       </div>
 
       <form class="form-group">
-        <label for="country">Zkontrolováno:</label>
+        <label>Zkontrolováno:</label>
         <input type="checkbox">
       </form>
 
       <form class="form-group">
-        <label for="country">Skrytá:</label>
+        <label>Skrytá:</label>
         <input type="checkbox">
       </form>
 
       <div class="form-group">
-        <label for="country">Slít s:</label>
+        <label>Merge:</label>
         <select class="form-control" id="country">
           <option>skola</option>
           <option>skola</option>
