--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -1,1 +1,96 @@
-opravovanie
+<section id="admin-correcting" class="container content-section" style=" margin-top: 20px; text-align:justify">
+  <h2>Opravování</h2>
+  <div class="panel panel-default">
+    <div class="panel-heading">Zvolit omezení</div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label>Ročník:</label>
+        <select>
+         <option>2014</option> <!-- TODO rocniky -->
+         <option>2013</option>
+         <option>2012</option>
+        </select>
+        <label style="margin-left:20px">Vlna:</label>
+        <select>
+         <option>vlna 1</option> <!-- TODO vlny -->
+         <option>vlna 2</option>
+         <option>vlna 3</option>
+        </select>
+        <label style="margin-left:20px">Příklad:</label>
+        <select>
+         <option>priklad 1</option> <!-- TODO priklad -->
+         <option>priklad 2</option>
+         <option>priklad 3</option>
+        </select>
+        <label style="margin-left:20px">Stav:</label>
+        <select>
+         <option>všechny</option> <!-- TODO stav -->
+         <option>odevzdáno</option>
+         <option>opraveno</option>
+         <option>uzavřeno</option>
+        </select>
+        <label style="margin-left:20px">Řešitel:</label>
+        <select>
+         <option>jmeno</option> <!-- TODO priklad -->
+         <option>jmeno</option>
+         <option>jmeno</option>
+        </select>
+      </div>
+      <button class="btn btn-primary inline" style="width: 250px; margin-left:0px">OK</button> <!-- TODO button -->
+    </div>
+  </div>
+
+  <div class="alert alert-info">
+    Nezapomeň výsledky zveřejnit!
+  </div>
+
+  <div class="panel panel-ksi">
+	  <div class="panel-heading panel-heading-ksi" style="hight:400px">
+      Honza Sikovny <!-- meno resitele -->
+      <div style="float: right;">
+        Uloha 1. meno <!-- meno ulohy -->
+      </div>
+    </div>
+	  <div class="panel-body">
+	     <div id="date-text">
+         řešení naposledy upraveno: 2.12.2014 16:35 <!-- datum reseni -->
+         <div style="float: right;">
+           Opravil: Heňo <!-- opravujuci -->
+         </div></div>
+       <hr>
+
+       <button class="btn btn-sm btn-primary" style="width: 250px; margin-left:0px">Stáhnout řešení</button> <!-- TODO button -->
+
+       <div class="form-group" style="margin-top:20px">
+         <label>Komentár:</label>
+         {{text-editor value=articleEditEditor}}
+       </div>
+
+       <div class="form-group" style="margin-top:20px">
+         <form style="margin: 0; padding: 0;">
+          <p>
+            <label>Body: </label>
+            <input id="points" style="display: inline;" type="input"/> <!-- body -->
+            <label>Přidat trofej: </label>
+            <select>
+              <option><img src="http://placehold.it/30x30"> trofej</option> <!-- TODO obrazky z databaze -->
+              <option><img src="http://placehold.it/30x30"> trofej</option>
+              <option><img src="http://placehold.it/30x30"> trofej</option>
+            </select>
+            <label> Trofeje:</label>
+            <img src="http://placehold.it/30x30"> <!-- TODO kliknutim smazat -->
+          </p>
+        </form>
+       </div>
+
+       <hr>
+       <button class="btn btn-sm btn-primary" style="width: 250px; margin-left:0px">Uložit</button> <!-- TODO button -->
+       <button class="btn btn-sm btn-primary" style="width: 250px; margin-left:0px">Zveřejnit</button> <!-- TODO button -->
+    </div>
+	</div>
+
+
+  <button class="btn btn-sm btn-primary" style="width: 250px; margin-left:20px;margin-bottom:20px">Uložit vše</button> <!-- TODO button -->
+  <button class="btn btn-sm btn-primary" style="width: 250px; margin-bottom:20px">Zveřejnit vše</button> <!-- TODO button -->
+
+</section>
