--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -44,7 +44,7 @@
 <section id="organizatori" class="container content-section">
     <!-- Sekcia o ksi -->
     <div class="jumbotron" style="background-color: #fff; ">
-        <div style="text-align: center; color: #39393a;"><h1>Organizátori</h1></div>
+        <div style="text-align: center; color: #39393a;"><h1>Organizátoři</h1></div>
         <div class="row" style="margin-top: 30px">
             <div class="col-xs-6 col-md-3">
                 <img src="http://placehold.it/150x150" style="width: 100%">
