--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -1,14 +1,20 @@
 <div>
   <div style="margin:20px">
-      textove zadanie ulohy <!-- textove zadanie -->
+     {{model.assignment.body}}
   </div>
   <div style="margin:20px">
-    <button class="btn btn-primary">Stáhnout pdf</button>
+    <a href="/tasks/{{model.id}}/assignment/pdf"><button class="btn btn-primary">Stáhnout pdf</button></a>
   </div>
+  {{log model}}
+  {{log is_programming}}
+  {{#if parentController.is_programming}}
   <!-- styl odovzdavania -->
   <!-- TMP Python -->
   <hr>
   <div class="controls" style="margin:20px">
+      <label for="threadName">Editor kódu</label>
+      {{code-editor content=model.assignment.code}}
+
       <label for="threadName">Python konzola:</label>
       <textarea class="form-control" style="min-width: 100%" rows="3"></textarea>
   </div>
@@ -16,36 +22,30 @@
       <button class="btn-sm btn-default inline">Nahrát .py soubor</button>
       <button class="btn-sm btn-default inline">Spusti</button>
   </div>
-  <!-- abcd odovzdavanie -->
-  <!--<hr>
-  <div class="controls" style="margin:20px">
-    <div class="panel panel-task">
-      <div class="panel-body">
-        <div class="checkbox">
-         <label><input type="checkbox" value="">Option 1</label>
-        </div>
-        <div class="checkbox">
-         <label><input type="checkbox" value="">Option 2</label>
-        </div>
-        <div class="checkbox disabled">
-         <label><input type="checkbox" value="">Option 3</label>
-        </div>
-        <div class="checkbox disabled">
-         <label><input type="checkbox" value="">Option 4</label>
+  {{/if}}
+  {{#if is_quiz}}
+    <!-- abcd odovzdavanie -->
+    <hr>
+    <div class="controls" style="margin:20px">
+      <div class="panel panel-task">
+        <div class="panel-body">
+          <div class="checkbox">
+           <label><input type="checkbox" value="">Option 1</label>
+          </div>
+          <div class="checkbox">
+           <label><input type="checkbox" value="">Option 2</label>
+          </div>
+          <div class="checkbox disabled">
+           <label><input type="checkbox" value="">Option 3</label>
+          </div>
+          <div class="checkbox disabled">
+           <label><input type="checkbox" value="">Option 4</label>
+          </div>
         </div>
       </div>
+      <div style="margin-top:20px">
+        <button class="btn btn-primary">Odpovědět</button>
+      </div>
     </div>
-    <div style="margin-top:20px">
-      <button class="btn btn-primary">Odpovědět</button>
-    </div>
-  </div>-->
-  <!-- vseobecne odovzdanie -->
-  <hr>
-  <div class="alert alert-warning" role="alert" style="margin:20px">
-    <!-- TODO color poznamky -->
-    <strong>Poznámka:</strong> odevzdávejte všechny vaše soubory řešení v jediném zip souboru. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
-  </div>
-  <div style="margin:20px">
-    <button class="btn btn-primary">Nahrát a odevzdát zip</button>
-  </div>
+  {{/if}}
 </div>
