--- a/app/templates/task/submission.hbs
+++ b/app/templates/task/submission.hbs
@@ -1,3 +1,12 @@
+ <!-- vseobecne odovzdanie -->
+  <hr>
+  <div class="alert alert-warning" role="alert" style="margin:20px">
+    <!-- TODO color poznamky -->
+    <strong>Poznámka:</strong> odevzdávejte všechny vaše soubory řešení v jediném zip souboru. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
+  </div>
+  <div style="margin:20px">
+    <button class="btn btn-primary">Nahrát a odevzdát zip</button>
+  </div>
 <table class="table table-striped table-hover-forum ">
   <thead>
     <tr style="height:45px">
