--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -18,6 +18,8 @@
         <li class="navbar-admin-li">{{#link-to "admin/schools"}}Školy{{/link-to}}</li>
         <li class="navbar-admin-li">{{#link-to "admin/users"}}Uživatelé{{/link-to}}</li>
         <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
+        <li class="navbar-admin-li">{{#link-to "admin/vlny"}}Vlny{{/link-to}}</li>
+        <li class="navbar-admin-li">{{#link-to "admin/achievements"}}Trofeje{{/link-to}}</li>
         <li class="navbar-admin-li">{{#link-to "admin/graph"}}Graf{{/link-to}}</li>
         <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
         <li class="navbar-admin-li">{{#link-to "admin/correcting"}}Opravování{{/link-to}}</li>
