admin task obazok

--- a/app/templates/admin/task-edit.hbs
+++ b/app/templates/admin/task-edit.hbs
@@ -50,6 +50,11 @@
       </div>
 
       <div class="form-group">
+        <label class="inline" for="email">Obrázek:</label> <!-- ako riesit ulohy s viac zdrojmi? obrazky? -->
+        <input class="inline" type="file">
+      </div>
+
+      <div class="form-group">
         <label class="inline" for="email">Zdroj:</label> <!-- ako riesit ulohy s viac zdrojmi? obrazky? -->
         <input class="inline" type="file">
       </div>
