--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -1,67 +1,14 @@
 <section id="faq" class="container content-section" style="text-align:justify">
 	<!-- Sekcia -->
 	<div style="margin:40px;">
-		<h2>Diskuse k úlohám</h2>
-		<table class="table table-striped table-hover-forum ">
-	    <thead>
-	      <tr style="height:45px">
-	        <th>Název vlákna</th>
-	        <th style="text-align: center;">Počet příspěvků</th>
-	        <th style="text-align: center;">Počet nečtených</th>
-					<!-- TODO? <th style="text-align: center;">Posledný příspěvek</th> -->
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-	        <td>
-						<h5 class="caption-text">
-							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
-							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
-						</h5>
-					</td>
-	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
-					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
-					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
-						Jirka Jiží:  				<!- - Meno autora prispevku - ->
-						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
-						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
-					</td> -->
-	      </tr>
+		<h2>Obecná diskuse</h2>
 
-				<tr>
-	        <td>
-						<h5 class="caption-text">
-							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
-							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
-						</h5>
-					</td>
-	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
-					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
-					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
-						Jirka Jiží:  				<!- - Meno autora prispevku - ->
-						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
-						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
-					</td> -->
-	      </tr>
-	    </tbody>
-	  </table>	<!-- zobrazovat max 10 vlakien? -->
-
-		<div class="text-center"> <!-- TODO colors -->
-			<ul class="pagination">
-			 <li><a href="#">&laquo;</a></li>
-			 <li class="active"><a href="#">1</a></li>
-			 <li><a href="#">2</a></li>
-			 <li><a href="#">3</a></li>
-			 <li><a href="#">4</a></li>
-			 <li><a href="#">5</a></li>
-			 <li><a href="#">&raquo;</a></li>
-			</ul>
+		<div class="alert alert-info">
+			Diskuse na těchto stránkách slouží jako oficiální kanál pro veřejnou
+			komunikaci s organizátory i ostatními účastníky. Diskusi pravidelně
+			sledujeme a odpovídáme na dotazy nebo připomínky.
+			Chceš-li nás kontaktovat neveřejně, <a href="mailto:ksi@fi.muni.cz">napiš nám</a>.
 		</div>
-
-	</div>
-
-	<div style="margin:40px;">
-		<h2>Hlavní diskuse</h2>
 
 		<div>
 			<button class="btn btn-primary">Nové vlákno</button> <!-- otvori/skryje nasledujuci panel -->
@@ -155,5 +102,66 @@
 			 <li><a href="#">&raquo;</a></li>
 			</ul>
 		</div>
+
 	</div>
+
+	<div style="margin:40px;">
+		<h2>Diskuse k úlohám</h2>
+		<table class="table table-striped table-hover-forum ">
+	    <thead>
+	      <tr style="height:45px">
+	        <th>Název vlákna</th>
+	        <th style="text-align: center;">Počet příspěvků</th>
+	        <th style="text-align: center;">Počet nečtených</th>
+					<!-- TODO? <th style="text-align: center;">Posledný příspěvek</th> -->
+	      </tr>
+	    </thead>
+	    <tbody>
+	      <tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+
+				<tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+	    </tbody>
+	  </table>	<!-- zobrazovat max 10 vlakien? -->
+
+		<div class="text-center"> <!-- TODO colors -->
+			<ul class="pagination">
+			 <li><a href="#">&laquo;</a></li>
+			 <li class="active"><a href="#">1</a></li>
+			 <li><a href="#">2</a></li>
+			 <li><a href="#">3</a></li>
+			 <li><a href="#">4</a></li>
+			 <li><a href="#">5</a></li>
+			 <li><a href="#">&raquo;</a></li>
+			</ul>
+		</div>
+	</div>
+
 </section>
