--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -3,18 +3,23 @@
     <div class="footer-above">
         <div class="container">
             <div class="row">
-                <div class="footer-col col-md-6">
+                <div class="footer-col col-md-5">
                     <h3>Kontakt</h3>
-                    <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>
+                    <a href="mailto:ksi@fi.muni.cz" class="footer-contact">ksi@fi.muni.cz</a>
+                    <a href="https://www.facebook.com/ksi.fi.muni">facebook</a>
                 </div>
-                <div class="footer-col col-md-6">
+                <div class="footer-col col-md-7">
                     <h3>Odkazy</h3>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="https://www.facebook.com/ksi.fi.muni" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                        </li>
-                        <!-- TODO: spolkove aktivity - pozri sob stranku -->
-                    </ul>
+                    <div class="footer-logos">
+                      <a href="http://mam.mff.cuni.cz" title="Studentský matematicko-fyzikální seminář a časopis" class="footer-logo wide mam-logo"></a>
+                      <a href="http://www.muni.cz/" title="Masarykova Univerzita Brno" class="footer-logo muni-logo"></a>
+                      <a href="http://www.fi.muni.cz/index.xhtml.cs" title="Fakulta Informatiky MU" class="footer-logo fi-logo"></a>
+                      <a href="http://www.sci.muni.cz/" title="Přírodovědecká fakulta MU" class="footer-logo prf-logo"></a>
+                      <a href="http://vibuch.math.muni.cz" title="Vzdělávací ikurz pro budoucí chemiky" class="footer-logo vibuch-logo"></a>
+                      <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo brkos-logo"></a>
+                      <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo keks-logo"></a>
+                      <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo interlos-logo"></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -23,7 +28,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Tato aktivita je realizována v rámci projektu Popularizace vědy a výzkumu v přírodních vědách a matematice s využitím potenciálu MU, reg. č. CZ.1.07/2.3.00/45.0018. Projekt je spolufinancován Evropským sociálním fondem a státním rozpočtem České republiky.
+                    Tato aktivita je realizována v rámci projektu Popularizace vědy a výzkumu v přírodních vědách a matematice s využitím potenciálu MU, reg. č. CZ.1.07/2.3.00/45.0018.
                     Copyright &copy; KSI 2015
                 </div>
             </div>
