--- a/app/styles/layout/navbar-main.scss
+++ b/app/styles/layout/navbar-main.scss
@@ -96,8 +96,8 @@
         display: block;
     }
     .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        border-top: 3px ksi-color('primary-orange');
+        box-shadow: inset 0 3px 0 ksi-color('primary-orange');
     }
     .navbar-collapse.collapse {
         display: none!important;
