--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -1,9 +1,164 @@
-<section id="results" class="container content-section" style="text-align:justify">
+<section id="registration" class="container content-section" style="text-align:justify">
 	<!-- Sekcia noviniek -->
 	<div class="jumbotron" style="background-color: transparent">
-	    <h1>Výsledky</h1>
-	    <p>Rád bys je viděl, co? Smůla!</p>
-		<p>Honzo preco su pod registraciou vysledky? O.o</p>
-		<p>Protože jsem blbec a nezměnil jsem template! Můžeš ten template klidně předělat!</p>
-	</div>
+	    <h2>Registrace</h2>
+			<div style="margin-top:30px">
+				<h4>Přihlašovací údaje</h4>
+				<hr>
+			</div>
+
+      <div class="form-group">
+        <label for="name">Přihlašovací jméno:</label>
+        <input type="text" class="form-control" id="name">
+      </div>
+
+      <div class="form-group">
+        <label for="surname">Heslo:</label>
+        <input type="text" class="form-control" id="surname">
+      </div>
+
+      <div class="form-group">
+        <label for="email">Heslo znovu:</label>
+        <input type="text" class="form-control" id="email">
+      </div>
+
+			<div style="margin-top:30px">
+				<h4>Osobní údaje</h4>
+				<hr>
+			</div>
+
+      <div class="form-group">
+        <label for="name">Jméno:</label>
+        <input type="text" class="form-control" id="name">
+      </div>
+
+      <div class="form-group">
+        <label for="surname">Přímení:</label>
+        <input type="text" class="form-control" id="surname">
+      </div>
+
+      <div class="form-group">
+        <label for="email">E-mail:</label>
+        <input type="text" class="form-control" id="email">
+      </div>
+
+			<div class="form-group">
+        <label for="tshirt">Pohlaví:</label>
+        <select class="form-control" id="tshirt">
+          <option>Muž</option>
+          <option>Žena</option>
+        </select>
+      </div>
+
+      <div style="margin-top:30px">
+				<h4>Adresa</h4>
+				<hr>
+			</div>
+
+      <div class="form-group">
+        <label for="street">Ulice:</label>
+        <input type="text" class="form-control" id="street">
+      </div>
+
+      <div class="form-group">
+        <label for="city">Město:</label>
+        <input type="text" class="form-control" id="city">
+      </div>
+
+      <div class="form-group">
+        <label for="psc">PSČ:</label>
+        <input type="text" class="form-control" id="psc">
+      </div>
+
+      <div class="form-group">
+        <label for="country">Krajina:</label>
+        <select class="form-control" id="country">
+          <option>Česká republika</option>
+          <option>Slovensko</option>
+        </select>
+      </div>
+
+			<div style="margin-top:30px">
+				<h4>Škola</h4>
+				<hr>
+			</div>
+
+			<div class="form-group">
+				<label for="street">Název:</label>
+				<input type="text" class="form-control" id="name-school">
+			</div>
+
+			<div class="form-group">
+				<label for="street">Ulice:</label>
+				<input type="text" class="form-control" id="street-school">
+			</div>
+
+			<div class="form-group">
+				<label for="city">Město:</label>
+				<input type="text" class="form-control" id="city-school">
+			</div>
+
+			<div class="form-group">
+				<label for="psc">PSČ:</label>
+				<input type="text" class="form-control" id="psc-school">
+			</div>
+
+			<div class="form-group">
+        <label for="country">Krajina:</label>
+        <select class="form-control" id="country">
+          <option>Česká republika</option>
+          <option>Slovensko</option>
+        </select>
+      </div>
+			<!--
+      <div class="form-group">
+        <label for="school">Škola:</label> (formát: název, ulice, město, PSČ, stát - ČR nebo SR)  <!- -TODO dropdown menu ? - ->
+        <input type="text" class="form-control" id="school">
+      </div>
+			-->
+
+			<div class="form-group">
+        <label for="year-maturita">Rok maturity:</label>
+				<select class="form-control" id="year-maturita">
+          <option>2016</option>
+          <option>2017</option>
+        </select>
+      </div>
+
+			<div style="margin-top:30px">
+				<h4>Profil</h4>
+				<hr>
+			</div>
+
+      <div class="form-group">
+        <label for="description">Krátky popis seba:</label>
+        <textarea class="form-control" rows="5" id="description"></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="tshirt">Velikost trička:</label>
+        <select class="form-control" id="tshirt">
+          <option>S</option>
+          <option>M</option>
+          <option>L</option>
+          <option>XL</option>
+          <option>XXL</option>
+        </select>
+      </div>
+
+			<div class="form-group">
+				<label for="photo">Profilová fotografie:</label> (fotografie není povinná, bude se ukazovat na webu v diskusích)
+				<br>
+				<button type="button" class="btn btn-primary" style="margin-top:20px; width:250px;"> <!-- TODO file button -->
+	        <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>
+	        Nahraj fotografii
+	      </button>
+			</div>
+
+			<div align="center" style="margin:30px">
+				<button type="button" class="btn btn-primary">
+	        <h2>Registruj se</h2>
+	      </button>
+			</div>
+		</div>
 </section>
