grafika uprava -> svg

--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -41,11 +41,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                       <div style="text-align:center;">
                         <div style="display:inline">
-                          {{#if false}} <!-- TODO have profile picture -->
-                  					<img src="{{model.profile_pic}}" width="50px" height="50px">
-                  				{{else}}
-                  					<img src="img/box-ksi.png" width="50px" height="50px"/>
-                  				{{/if}}
+                    				<img src="{{model.profile_pic}}" style="width:50px;"/>
                         </div>
                         <div id="header-text" style=" margin-left:10px; display:inline">
                           {{model.name}}
