--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -24,17 +24,17 @@
             <div class="row" style="margin-top: 30px"> <!-- TODO center images -->
               <div class="col-xs-12 col-sm-4">
                 {{#link-to "achievements"}}
-                  <img src="img/info-achievement.png" style="max-width:300px;"/>
+                  <img src="img/info-achievement.svg" style="max-width:300px;"/>
                 {{/link-to}}
               </div>
               <div class="col-xs-12 col-sm-4">
                 <a href="http://ksi.fi.muni.cz/kscuk/">
-                  <img src="img/info-kscuk.png" style="max-width:300px;"/>
+                  <img src="img/info-kscuk.svg" style="max-width:300px;"/>
               </a>
               </div>
               <div class="col-xs-12 col-sm-4">
                 {{#link-to "tasks"}}
-                  <img src="img/info-ksi.png" style="max-width:300px;"/>
+                  <img src="img/info-ksi.svg" style="max-width:300px;"/>
                 {{/link-to}}
               </div>
             </div>
